--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 <p><br><br></p>	
 <div class="zhengti">
 	<div class="juzuo1">
-			V24100048 (Max Nguyen)
+			V24050026 ( Jun Vu )
 	</div>
 	<div class="saomatishi juzhong" id="biaoti">
 		将二维码对准扫描器扫码进出场	
