--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 <p><br><br></p>    
 <div class="zhengti">
     <div class="juzuo1">
-        V24050026 ( Jun Vu )
+        V25020074 ( Richard Le )
     </div>
     <div class="saomatishi juzhong" id="biaoti">
         将二维码对准扫描器扫码进出场    
